Feat/services section (#3)
* creating of services section

* Add services section cards with responsive design

* Add autoscroll function in carousel

---------

Co-authored-by: Your Name <you@example.com>

--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  background-color: #F3FFF4;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+    /* Hide scrollbar for Chrome, Safari, Opera */
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
 }
