--- a/src/index.css
+++ b/src/index.css
@@ -33,4 +33,14 @@ code {
     scrollbar-width: none;
     /* Firefox */
   }
+
+  .thin-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(179, 179, 179, 0.856);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+  }
 }
