Fix searchbar issues

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
   overflow-x: hidden;
-  background-color: #F3FFF4;
+  background-color: #eaffec;
 }
 
 code {
